--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,29 @@
                 </configuration>
             </plugin>
         </plugins>
+
+
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.20</version>
+                    <configuration>
+                        <argLine>
+                            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                        </argLine>
+                    </configuration>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.aspectj</groupId>
+                            <artifactId>aspectjweaver</artifactId>
+                            <version>${aspectj.version}</version>
+                        </dependency>
+                    </dependencies>
+                </plugin>
+            </plugins>
+
+
     </build>
 
 
@@ -37,6 +60,15 @@
             <version>5.15.0</version>
             <scope>test</scope>
         </dependency>
+
+
+            <dependency>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-testng</artifactId>
+                <version>2.13.6</version>
+                <scope>test</scope>
+            </dependency>
+
 
 
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
