--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,6 @@
     </properties>
 
 
-
     <build>
         <plugins>
             <plugin>
@@ -56,7 +55,6 @@
         </plugins>
     </build>
 
-
     <dependencies>
 
         <dependency>
@@ -78,6 +76,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.0.0-alpha-6</version>
+        </dependency>
 
         <dependency>
             <groupId>io.qameta.allure</groupId>
