--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,11 @@
             <version>1.1.7</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.paulhammant</groupId>
+            <artifactId>ngwebdriver</artifactId>
+            <version>1.1.5</version>
+        </dependency>
 
 
     </dependencies>
